KField Stage 1 WIP

--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -99,22 +99,7 @@
 	-MODULE[BDExplosivePart] {}
 }
 
-@PART[YU6]:NEEDS[SMA] {
-	@title = Yu-6 Fish
-	@description = The Yu-6 (鱼-6) "Fish 6" torpedo is the Chinese counterpart of the US Mark 48 torpedo, and it is the first domestic Chinese torpedo designed to counter both surface ships and submarines from the very start. Guidance can be by wire, active and passive homing, or wake homing. Domestic Chinese sources have claimed that the Yu-6 torpedo is in the same class as the Mk 48 Mod. 4 torpedo, and it is believed to have been cloned from a captured sample, but official information on the Yu-6 torpedo is limited.
-	@MODULE[MissileLauncher] {
-		%shortName = Yu-6
-	}
-	-MODULE[ModuleRotor] {}
-}
-@PART[YU-7]:NEEDS[SMA] {
-	@title = Yu-7 Fish
-	@description = The Yu-7 (鱼-7) "Fish 7" torpedo is a lightweight torpedo developed by the People's Republic of China. It entered service in the 1990s as the principal anti-submarine weapon of major People's Liberation Army Navy (PLAN) warships. The Yu-7 is a derivative of the Whitehead Alenia Sistemi Subacquei (WASS) A244/S torpedo.
-	@MODULE[MissileLauncher] {
-		%shortName = Yu-7
-	}
-	-MODULE[ModuleRotor] {}
-}
+
 @PART[59-94]:NEEDS[SMA] {
 	@title = Type 59
 	@description = The WZ-120/Type 59 (59式) main battle tank is a Chinese-produced version of the Soviet T-54A tank, an early model of the ubiquitous T-54/55 series. The first vehicles were produced in 1958 and it was accepted into service in 1959, with serial production beginning in 1963. Over 10,000 of the tanks were produced by the time production ended in 1985 with approximately 5,500 serving with the Chinese armed forces. The tank formed the backbone of the Chinese People's Liberation Army until the early 2000s with an estimated 5,000 of the later Type 59-I and Type 59-II variants in service in 2002.
@@ -140,14 +125,14 @@
 @PART[FT1250KG]:NEEDS[SMA] {
 	@title = FT-1 250kg
 	@description = The CALT FT PGB is an abbreviation for a family of Chinese built precision guided munitions named To-Fly Precision Guided Bomb. The FT PGB is actually an upgrade kit to modernize gravity bombs with precision guidance, a technology reportedly to be reverse engineered from unexploded Joint Direct Attack Munition (JDAM) ordnance in the NATO bombing of the People's Republic of China embassy in Belgrade, according to many Chinese military enthusiasts. FT series PGB was first revealed to public at the 7th Zhuhai Airshow held in November 2006 with two models of the family FT-1 and FT-3.
-	@MODULE[ModuleWeapon] {
+	@MODULE[MissileLauncher] {
 		%shortName = FT-1 250kg
 	}
 }
 @PART[FT1500KG]:NEEDS[SMA] {
 	@title = FT-2 500kg
 	@description = The CALT FT PGB is an abbreviation for a family of Chinese built precision guided munitions named To-Fly Precision Guided Bomb. The FT PGB is actually an upgrade kit to modernize gravity bombs with precision guidance, a technology reportedly to be reverse engineered from unexploded Joint Direct Attack Munition (JDAM) ordnance in the NATO bombing of the People's Republic of China embassy in Belgrade, according to many Chinese military enthusiasts. FT series PGB was first revealed to public at the 7th Zhuhai Airshow held in November 2006 with two models of the family FT-1 and FT-3.
-	@MODULE[ModuleWeapon] {
+	@MODULE[MissileLauncher] {
 		%shortName = FT-2 500kg
 	}
 }
@@ -155,15 +140,12 @@
 	node_stack_bottom = 0.0, 0.0, -1.156, 0.0, 0.0, -1.0, 0, 1
 	@title = HQ-10 Red Banner
 	@description = The SAST HQ-10 (红旗-10) "Red Banner 10" is a short range surface-to-air missile, currently in service as a point defense missile system aboard PLA Navy warships as HHQ-10. The system was first adopted by the Liaoning aircraft carrier and the Type 056 corvette in 2011.
-	@MODULE[ModuleWeapon] {
+	@MODULE[MissileLauncher] {
 		%shortName = HQ-10
 	}
 }
 @PART[HHQ-10Launcher]:NEEDS[SMA] {
 	@title = HHQ-10 Launcher
-	@MODULE[ModuleWeapon] {
-		%shortName = HQ-10
-	}
 }
 @PART[H/PJ-38]:NEEDS[SMA] {
 	@title = H/PJ-45
@@ -172,24 +154,24 @@
 		%shortName = H/PJ-45
 	}
 }
-@PART[HQ-19]:NEEDS[SMA] {
-	@title = HQ-19 Red Banner
-	@description = The HQ-19 "Red Banner 19" Surface-to-Air missilese is a vastly upgraded version of HQ-9 to counter ballistic missile and satellites (ASAT) on the lower end of Low Earth orbits, and it is the Chinese equivalent of THAAD. HQ-19 is armed with a dual purpose exosphere kinetic kill vehicle (kkv) warhead, which can be used against ballistic missile warheads or satellites. Its first flight occurred in 2003.
-	@MODULE[ModuleWeapon] {
-		%shortName = HQ-19
-	}
-}
 @PART[HQ-9]:NEEDS[SMA] {
 	@title = HQ-9 Red Banner
 	@description = The HQ-9 "Red Banner 9" is a medium-to-long range active radar homing surface-to-air missile. Similar in capability to the Russian S-300 and American Patriot systems. The naval variant, HHQ-9, appears to be identical to the land-based variant. HHQ-9 is equipped in the PLAN Type 052C Lanzhou class destroyer in VLS launch tubes.
-	@MODULE[ModuleWeapon] {
+	@MODULE[MissileLauncher] {
 		%shortName = HQ-9
+	}
+}
+@PART[HQ-19]:NEEDS[SMA] {
+	@title = HQ-19 Red Banner
+	@description = The HQ-19 "Red Banner 19" Surface-to-Air missilese is a vastly upgraded version of HQ-9 to counter ballistic missile and satellites (ASAT) on the lower end of Low Earth orbits, and it is the Chinese equivalent of THAAD. HQ-19 is armed with a dual purpose exosphere kinetic kill vehicle (kkv) warhead, which can be used against ballistic missile warheads or satellites. Its first flight occurred in 2003.
+	@MODULE[MissileLauncher] {
+		%shortName = HQ-19
 	}
 }
 @PART[KD20]:NEEDS[SMA] {
 	@title = KD-20 Long Sword
 	@description = The KD-20 "Long Sword 20" is an subsonic air-launched cruise missile version of the Long Sword-10, equipped with the Chinese People's Liberation Army Air Force. It can be launched by H-6M (4 pieces), H-6K (6 pieces) planes in the service of the PLA.
-	@MODULE[ModuleWeapon] {
+	@MODULE[MissileLauncher] {
 		%shortName = KD-20 ALCM
 	}
 }
@@ -202,8 +184,8 @@
 }
 @PART[LS6]:NEEDS[SMA] {
 	@title = LS-6 GGB 500kg
-	@description = The EOTDC/CASC LS is an abbreviation for a family of Chinese built precision-guided munitions (PGM) named Thunder Stone Precision Guided Bomb (雷石精确制导炸弹). The LS PGB is also referred to by its gliding capability, as Thunder Stone Gliding Guided Bomb (雷石滑翔制导炸弹) or LS GGB. LS PGB is actually an upgrade kit to modernize gravity bombs with precision / laser guidance.
-	@MODULE[ModuleWeapon] {
+	@description = The EOTDC & CASC LS is an abbreviation for a family of Chinese built precision-guided munitions (PGM) named Thunder Stone Precision Guided Bomb (雷石精确制导炸弹). The LS PGB is also referred to by its gliding capability, as Thunder Stone Gliding Guided Bomb (雷石滑翔制导炸弹) or LS GGB. LS PGB is actually an upgrade kit to modernize gravity bombs with precision / laser guidance.
+	@MODULE[MissileLauncher] {
 		%shortName = LS-6 GGB 500kg
 	}
 }
@@ -214,15 +196,125 @@
 		%shortName = PGZ-09
 	}
 }
+@PART[PL-8B]:NEEDS[SMA] {
+	@title = PL-8B Thunderbolt
+	@description = The CATIC & XEMF PL-8B (霹雳-8) "Thunderbolt 8" is a Chinese air-to-air missile originated from the Israeli Python-3 AAM. China's PLAAF was quite impressed with Python, and paid for licensed production as the PL-8 AAM in the 1980s. From March 1988 to April 1989, technology transfer to China was complete and the domestic PL-8B missile received state certification.
+    
+	@MODULE[MissileLauncher] {
+		%shortName = PL-8B
+	}
+}
 @PART[PL-10A]:NEEDS[SMA] {
 	@title = PL-10A Thunderbolt
-	@description = The EOTDC/CASC PL-10 (霹雳-10) "Thunderbolt 10" is a short-range, infrared-homing air-to-air missile (AAM) developed by the People's Republic of China. It was designed by Dr. Liang Xiaogeng (梁晓庚) at the Luoyang Electro Optical Center. Development of the missile commenced in 2004 for use on stealth fighters such as the J-20. The missile is fitted with a multi-element IIR seeker capable of +/-90 degree off boresight angles. Flight is controlled by a thrust-vector controlled solid rocket motor and free-moving type control wings on the missile's tail.
-	@MODULE[ModuleWeapon] {
+	@description = The EOTDC & CASC PL-10 (霹雳-10) "Thunderbolt 10" is a short-range, infrared-homing air-to-air missile (AAM) developed by the People's Republic of China. It was designed by Dr. Liang Xiaogeng (梁晓庚) at the Luoyang Electro Optical Center. Development of the missile commenced in 2004 for use on stealth fighters such as the J-20. The missile is fitted with a multi-element IIR seeker capable of +/-90 degree off boresight angles. Flight is controlled by a thrust-vector controlled solid rocket motor and free-moving type control wings on the missile's tail.
+	@MODULE[MissileLauncher] {
 		%shortName = PL-10A
 	}
 }
+@PART[PL-12]:NEEDS[SMA] {
+	@title = PL-12 Thunderbolt
+	@description = The CATIC PL-12 (霹雳-12) "Thunderbolt 12" is an active radar-guided beyond-visual-range air-to-air missile developed by the People's Republic of China. Development was assisted by Vympel NPO and Agat of Russia. It is considered comparable to the US AIM-120 AMRAAM and the Russian R-77.
+	@MODULE[MissileLauncher] {
+		%shortName = PL-12
+	}
+}
+@PART[PL-15]:NEEDS[SMA] {
+	@title = PL-15 Thunderbolt
+	@description = The PL-15 (霹雳-15) is an air-to-air missile with active radar guidance and beyond-horizon combat capabilities developed and produced by the People's Republic of China that entered service in 2016. Compared with the previous PL-12, the PL-15 has a longer radar detection range and approximately twice the range.
+	@MODULE[MissileLauncher] {
+		%shortName = PL-15
+	}
+}
+@PART[PLZ05]:NEEDS[SMA] {
+	@title = Type 05
+	@description = The Type 05 / PLZ-05 155 mm self-propelled howitzer is the People's Liberation Army's 155 mm self-propelled artillery gun. It was officially finalized for mass production in 2005.
+	@MODULE[ModuleWeapon] {
+		%shortName = Type 05
+	}
+}
+@PART[RADAR346B]:NEEDS[SMA] {
+	@title = H/LJG-346 Star of the Sea Radar
+	@description = The H/LJG-346 "Star of the Sea" Radar "Dragon Eye", is a digital and multi-functional C/S band sea-based active phased array radar equipped on Type 052C/D/055/001/002 Destroyers and carriers.
+	@MODULE[ModuleRadar] {
+		%shortName = H/LJG-346 Radar
+	}
+}
+@PART[TorpedoLauncher]:NEEDS[SMA] {
+	@title = H/YFG Torpedo Launcher
+	@description = The torpedo tubes for the Yu-6/7.
+}
+@PART[YJ-83]:NEEDS[SMA] {
+	@title = YJ-83 Eagle Strike
+	@description = The CASIC YJ-83 (鹰击-83) "Eagle Strike 83" (CSS-N-8) "Saccade" is a Chinese subsonic anti-ship surface-launched cruise missile in service since 1999. Its range is 180km while carrying 165kg of explosives.
+	@MODULE[MissileLauncher] {
+		%shortName = YJ-83
+	}
+}
+@PART[YJ-83K]:NEEDS[SMA] {
+	@title = YJ-83K Eagle Strike
+	@description = The CASIC YJ-83 (鹰击-83) "Eagle Strike 83' (CSS-N-8) "Saccade" is a Chinese subsonic anti-ship air-launched cruise missile in service since 1999. Its range is 180km while carrying 165kg of explosives.
+	@MODULE[MissileLauncher] {
+		%shortName = YJ-83K
+	}
+}
+@PART[YJ-Launcher]:NEEDS[SMA] {
+	@title = GJB 5860-2006
+	@description = The GJB 5860-2006 (国家军用标准 5860-2006) "National Military Standard 5860-2006" is a Chinese military technical standard describing a vertical launching system (VLS) comparable to american or european VL-Systems for all types of missiles aboard the PLA naval surface combatants. Cells have square side of 850mm and length between 3 - 9m.
+}
+@PART[YJ9]:NEEDS[SMA] {
+	@title = YJ-8 Eagle Strike
+	@description = The AMRI YJ-8 (鹰击-8) "Eagle Strike 8" (CSS-N-4) "Sardine" anti-ship missile was developed by the People’s Republic of China. Because of its similar appearance and layout to the French Flying Fish anti-ship missile when it was first discovered, it was called "Chinese Flying Fish".
+    
+	@MODULE[MissileLauncher] {
+		%shortName = YJ-8
+	}
+}
+@PART[YJ12]:NEEDS[SMA] {
+	@title = YJ-12 Eagle Strike
+	@description = The NRI & TAAA YJ-12 (鹰击-12) "Eagle Strike 12" is a large supersonic anti-ship missile developed and put into service in the 2000s by the People's Republic of China. The program was to replace the existing YJ-83 and YJ-62 missiles.
+    
+	@MODULE[MissileLauncher] {
+		%shortName = YJ-12
+	}
+}
+@PART[YJ18]:NEEDS[SMA] {
+	@title = YJ-18 Eagle Strike
+	@description = The TRI of CASIC YJ-18 (鹰击-18) "Eagle Strike 18" (CH-SS-NX-13) is a supersonic anti-ship missile developed by the People’s Republic of China. The missile is based on the Russian 3M-54E "Club". The missile uses a subsonic flight mode in the cruise phase to increase its range; the end attack phase is converted to a supersonic penetration.
+    
+	@MODULE[MissileLauncher] {
+		%shortName = YJ-18
+	}
+}
+@PART[YU6]:NEEDS[SMA] {
+	@title = Yu-6 Fish
+	@description = The Yu-6 (鱼-6) "Fish 6" torpedo is the Chinese counterpart of the US Mark 48 torpedo, and it is the first domestic Chinese torpedo designed to counter both surface ships and submarines from the very start. Guidance can be by wire, active and passive homing, or wake homing. Domestic Chinese sources have claimed that the Yu-6 torpedo is in the same class as the Mk 48 Mod. 4 torpedo, and it is believed to have been cloned from a captured sample, but official information on the Yu-6 torpedo is limited.
+	@MODULE[MissileLauncher] {
+		%shortName = Yu-6
+	}
+	-MODULE[ModuleRotor] {}
+}
+@PART[YU-7]:NEEDS[SMA] {
+	@title = Yu-7 Fish
+	@description = The Yu-7 (鱼-7) "Fish 7" torpedo is a lightweight torpedo developed by the People's Republic of China. It entered service in the 1990s as the principal anti-submarine weapon of major People's Liberation Army Navy (PLAN) warships. The Yu-7 is a derivative of the Whitehead Alenia Sistemi Subacquei (WASS) A244/S torpedo.
+	@MODULE[MissileLauncher] {
+		%shortName = Yu-7
+	}
+	-MODULE[ModuleRotor] {}
+}
+@PART[ZBL09]:NEEDS[SMA] {
+	@title = Type 08 Snow Leopard
+	@description = The Norinco Type 08 / ZBL-08 (08式轮式装甲车族) wheeled infantry fighting vehicle commissioned in 2009. It uses 30mm ZPT-99 cannon and optionally HJ-73 ATGM.
+	@MODULE[MissileWeapon] {
+		%shortName = Type 08
+	}
+}
+@PART[ZTZ15_Turret]:NEEDS[SMA] {
+	@title = Type 08 Snow Leopard
+	@description = The Type 08 / ZBL-08 (08式轮式装甲车族) wheeled infantry fighting vehicle commissioned in 2009. It uses 30mm ZPT-99 cannon and optionally HJ-73 ATGM.
+	@MODULE[MissileWeapon] {
+		%shortName = Type 08
+	}
+}
 
-
-//Chinese VLS = GJB 5860-2006
 
 
