KerbalField Stage 1 continues.

--- a/EW/AircraftGuns.cfg
+++ b/EW/AircraftGuns.cfg
@@ -278,8 +278,26 @@
 	}
 }
 //M61A1
-+PART[bahaHiddenVulcan]:FINAL {
++PART[bahaHiddenVulcan]:NEEDS[!SMA]:FINAL {
 	@name = air_M61A1
+	@title = M61A1
+	@mass = 0.112
+	@manufacturer = Kerbal Kombat Anthology
+	@description = The M61A1 is an American machine gun widely used in military aircraft of the USAF.
+	@MODULE[ModuleWeapon] {
+		@shortName = M61A1
+		@roundsPerMinute = 6000
+		@bulletVelocity = 1080
+		@bulletType = 20mmBullet
+		@ammoName = 20mm
+		
+		%engageAir = true
+		%engageMissile = false
+		%engageGround = false
+		%engageSLW = false
+	}
+}
+@PART[bahaHiddenVulcan]:NEEDS[SMA]:FINAL {
 	@title = M61A1
 	@mass = 0.112
 	@manufacturer = Kerbal Kombat Anthology
@@ -300,7 +318,7 @@
 //GSh-23L
 +PART[bahaHiddenVulcan]:FINAL {
 	@name = air_GSh23L
-	@title = 9-A-472 GSh-23L
+	@title = 9A472 GSh-23L
 	@mass = 0.050
 	@manufacturer = Kerbal Kombat Anthology
 	@description = The Gryazev-Shipunov 9-A-472/GSh-23/TKB-613/AO-9 is a twin-barreled 23 mm autocannon developed in the Soviet Union. It entered service in 1965, replacing the earlier Nudelman-Rikhter NR-23 cannon.
