--- a/EW/Categories.cfg
+++ b/EW/Categories.cfg
@@ -112,7 +112,7 @@ SUBCATEGORY {
 		FILTER {
 		CHECK {
 			type = name
-			value = air_ADEN, air_AN/M3, air_DEFA, air_M39A1, air_N-37, air_NR-30, air_NS-23, bahaGatlingGun, bahaHiddenVulcan, TU423
+			value = air_ADEN, air_AN/M3, air_DEFA, air_M39A1, air_N-37, air_NR-30, air_NS-23, bahaGatlingGun, TU423
 		}
     }
 }
@@ -134,7 +134,7 @@ SUBCATEGORY {
 	FILTER {
 		CHECK {
 			type = name
-			value = air_GSh23L, air_M61A1, tank_AMX30, tank_ChieftainMk3, tank_Leopard1A0, tank_Leopard1A1, tank_M41, tank_M551, tank_M60A1, tank_T62, T62M1, T-64, 59-94, O120, Obj906, Ru251, D30, bahaM102Howitzer, Leopard1, Elden40, theotomelara76compact, mk19Turret, M113GunTurret, CROWS7_62, APC30Cg2A42, ShilkaZSU234turret, AK230, M163VADS
+			value = air_GSh23L, air_M61A1, tank_AMX30, tank_ChieftainMk3, tank_Leopard1A0, tank_Leopard1A1, tank_M41, tank_M551, tank_M60A1, tank_T62, T62M1, T-64, 59-94, O120, Obj906, Ru251, D30, bahaM102Howitzer, Leopard1, Elden40, theotomelara76compact, mk19Turret, M113GunTurret, CROWS7_62, APC30Cg2A42, ShilkaZSU234turret, AK230, M163VADS, bahaHiddenVulcan
 		}
     }
 	FILTER {
