Squashed commit of the following:
commit acb4002f9806d3302dfbefeabaecf335c2041cae
Author: Toonu <Toonu44@gmail.com>
Date:   Mon Jun 28 10:44:21 2021 +0200

    Typo in GSh-23

commit 99366720d8ca6f4bcb21a809386732e1e205a062
Author: Toonu <Toonu44@gmail.com>
Date:   Mon Jun 28 10:25:30 2021 +0200

    KerbalField Stage 1 continues.

commit a0ed8e348895ec9cb1a345aa121316a419eb6c2f
Author: toonu <toonu44@gmail.com>
Date:   Sun Jun 27 14:13:08 2021 +0200

    KField Stage 1 WIP

commit 79efe30b5407caed0f533c0a923824c074886414
Author: Toonu <Toonu44@gmail.com>
Date:   Sun Jun 27 10:50:34 2021 +0200

    KerbalField Optimalisation Stage 1

commit 6d670ea2267c42166bc4343316ceec1e0072a84b
Author: Toonu <Toonu44@gmail.com>
Date:   Sat Jun 26 16:36:12 2021 +0200

    P-40 and tweaks.

    Changelog: Added P-40 radar model and fixed P-15 model,  MNWS Optimalisation Stage I.

commit 7344079ec3b11598b0e41c103b4d573ac17f3199
Author: Toonu <Toonu44@gmail.com>
Date:   Fri Jun 25 21:58:20 2021 +0200

    Update from modpack optimization.

commit 0b671856b3a5693a9303532d8c17aa197f0b73f9
Author: Toonu <Toonu44@gmail.com>
Date:   Fri Jun 25 19:13:44 2021 +0200

    Update MM_AA.cfg

commit c83f3f4f50e56ed33e321ff37a0e4c899aac716b
Author: Toonu <Toonu44@gmail.com>
Date:   Fri Jun 25 11:27:59 2021 +0200

    Typo Fix

commit b28b16f97afdc297e5cee26434755e0cee9d111a
Author: Toonu <Toonu44@gmail.com>
Date:   Fri Jun 25 11:21:51 2021 +0200

    Missing bullets

commit 6ca8e7b9484acab4d55508ea4a3153d6e75fda62
Author: Toonu <Toonu44@gmail.com>
Date:   Thu Jun 24 21:27:28 2021 +0200

    KKA Update

commit 51b5259ea63808373fbf692535a67ac583bc3fd0
Author: Toonu <Toonu44@gmail.com>
Date:   Thu Jun 24 21:23:34 2021 +0200

    Bookkeeping.

commit e9e982353f0ed9dd232071f086b7b10da97c70ec
Author: Toonu <Toonu44@gmail.com>
Date:   Thu Jun 24 18:50:02 2021 +0200

    Bookkeeping

--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -744,12 +744,33 @@
 }
 @PART[AFVeraSkirtMK1]:NEEDS[SMA] {
     @title = ERA Skirt
+	@MODULE[HitpointTracker] {
+		@HitPoints = 30000
+		@maxHitPoints = 30000
+		@Armor = 200
+		@ArmorThickness = 200
+		@ExplodeMode = Never
+	}
 }
 @PART[ReactivePanelPrototype]:NEEDS[SMA] {
     @title = ERA Panel
+	@MODULE[HitpointTracker] {
+		@HitPoints = 9000
+		@maxHitPoints = 9000
+		@Armor = 200
+		@ArmorThickness = 200
+		@ExplodeMode = Never
+	}
 }
 @PART[ReactivePanelPrototypeS]:NEEDS[SMA] {
 	@title = ERA Panel
+	@MODULE[HitpointTracker] {
+		@HitPoints = 9000
+		@maxHitPoints = 9000
+		@Armor = 200
+		@ArmorThickness = 200
+		@ExplodeMode = Never
+	}
 }
 @PART[S125NevaMissile]:NEEDS[SMA] {
 	// Kerbal Space Program - Part Config
@@ -1040,12 +1061,5 @@
 	@description = KBP 9M335/57E6 Surface-to-Air missile of the 96K6 "Pantsir-S1" (SA-22) "Greyhound" system is a two-stage solid fuel radio/optical command-guided missile in service from 2012 in Russian Federation Armed Forces.
 	@MODULE[MissileLauncher] {
 		@shortName = 9M335 Pantsir
-	}
-}
-@PART[AtakaAT]:NEEDS[SMA] {
-	@title = 9M120 Ataka
-	@description = KBM 9M120 "Ataka" (AT-9) "Spiral-2" is a Beam riding SACLOS missile designed to defeat tanks with composite armor and explosive reactive armor. Used with 9K120 system.
-	@MODULE[MissileLauncher] {
-		@shortName = 9M120 Ataka
 	}
 }
