--- a/EW/Radars.cfg
+++ b/EW/Radars.cfg
@@ -701,16 +701,55 @@ MODULE {
 	}
 }
 //60s P-40 Armour
-+PART[NAS_RA_21GoKai2_IJN]:NEEDS[NAS] {
-	@name = surv_p40
-	@title = 1S12 P-40 Armour Surveillance Radar
-	@bdacategory = Radars
-	@rescaleFactor = 3
-	@description = The 1S12 P-40 "Armour" (Long Face) is a mobile radar with great performance. It can lock onto fighters at 39km and bombers at 99km, making them ideal for mobile SAM sites.
-	@author = Toonu
-	@manufacturer = Kerbal Kombat Anthology
-	
-	@MODULE[ModuleRadar] {
+PART {
+// --- general parameters ---
+name = surv_p40
+module = Part
+author = Toonu
+
+// --- asset parameters ---
+rescaleFactor = 1
+
+// --- node definitions ---
+node_attach = 0.0, 0, 0, 0, -1, 0, 0
+
+NODE {
+	name = attach
+	transform = attachNode
+	size = 1
+	method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
+}
+
+// --- editor parameters ---
+TechRequired = precisionEngineering
+entryCost = 2100
+cost = 600
+category = none
+bdacategory = Radars
+subcategory = 0
+bulkheadProfiles = srf
+title = 1S12 P-40 Armour Surveillance Radar
+manufacturer = Kerbal Kombat Anthology
+description = The 1S12 P-40 "Armour" (Long Face) is a mobile radar with great performance. It can lock onto fighters at 39km and bombers at 99km, making them ideal for mobile SAM sites.
+attachRules = 0,1,0,0,1
+
+// --- standard part parameters ---
+mass = 1.45
+dragModelType = default
+maximum_drag = 0.2
+minimum_drag = 0.2
+angularDrag = 2
+crashTolerance = 7
+maxTemp = 3600
+
+MODEL {
+	model = KKA/Radars/P40
+}
+
+MODULE {
+        name = ModuleRadar
+        rotationTransformName = rotationTransform
+		
 		radarName = P-40 Surveillance Radar
 		rwrThreatType = 5
 		canRecieveRadarData = true
@@ -718,9 +757,9 @@ MODULE {
 		directionalFieldOfView = 1.5
 		resourceDrain = 0.2
 		
-		canLock = True
+		canLock = true
 		canTrackWhileScan = true
-		lockRotationSpeed = 90		
+		lockRotationSpeed = 90	
 		lockRotationAngle = 1.5
 		maxLocks = 2
 		multiLockFOV = 30
@@ -749,7 +788,6 @@ MODULE {
 			key = 58 40.18604 0.5120017 0.76555
 			key = 99 75 0.8722848 0.776747
 			key = 370.4 400 1.199295 0
-
 		}
 	}
 }
@@ -1101,6 +1139,7 @@ MODULE {
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@MODULE[ModuleRadar] {
+		@resourceDrain = 0
 		radarGroundClutterFactor = 1			// how much is the radar efficiency reduced to by ground clutter/look-down?
 		radarDetectionCurve {
 			key = 0 0
@@ -1120,6 +1159,7 @@ MODULE {
 	@author = Toonu
 	@manufacturer = Kerbal Kombat Anthology
 	@MODULE[ModuleRadar] {
+		@resourceDrain = 0
 		radarGroundClutterFactor = 1			// how much is the radar efficiency reduced to by ground clutter/look-down?
 		@maxLocks = 5
 		radarDetectionCurve {
