--- a/EW/Balancing/MM_MNWS.cfg
+++ b/EW/Balancing/MM_MNWS.cfg
@@ -1,3 +1,179 @@
-@PART[3XR]:NEEDS[MNWS_WEAPON&SMA] {
+
+@PART[MK58L]:NEEDS[SMA] {
+	@title = Mk. 25 SVTT
+	@description = The Mark 28 Surface Vessel Torpedo Tubes system is a torpedo launching system designed for the United States Navy. Used with Mk. 48 torpedoes.
+}
+@PART[YUXX]:NEEDS[SMA] {
+	@title = Mk. 32 SVTT
+	@description = The Mark 32 Surface Vessel Torpedo Tubes system is a torpedo launching system designed for the United States Navy. The Mark 32 has been the standard anti-submarine torpedo launching system aboard United States Navy surface vessels since its introduction in 1960, and is in use aboard the warships of several other navies. Used with Mk. 44, 46, 50 and 54 torpedoes.
+}
+@PART[MK56?Torpedo]:NEEDS[SMA] {
+	@title = Mk. 54 Torpedo
+	@description = The Mark 54 Lightweight Torpedo is a standard 12.75-inch (324 mm) anti-submarine warfare (ASW) torpedo used by the United States Navy.
+	@MODULE[MissileLauncher] {
+		%shortName = Mk. 54 Torpedo
+	}
+}
+
+@PART[MK48?Torpedo]:NEEDS[SMA] {
+	@title = Mk. 48 Mod 4 Torpedo
+	@description = The Mark 48 is American heavyweight submarine-launched torpedo. They were designed to sink deep-diving nuclear-powered submarines and high-performance surface ships.
+	@MODULE[MissileLauncher] {
+		%shortName = Mk. 48 Mod 4 Torpedo
+	}
+}
+@PART[MK58?Torpedo]:NEEDS[SMA] {
+	@title = Mk. 48 Mod 7 Torpedo
+	@description = The Mark 48 and its improved Advanced Capability (ADCAP) variant are American heavyweight submarine-launched torpedoes. They were designed to sink deep-diving nuclear-powered submarines and high-performance surface ships.
+	@MODULE[MissileLauncher] {
+		%shortName = Mk. 48 Mod 7 Torpedo
+	}
+}
+@PART[X51A]:NEEDS[SMA] {
+	@title = X-51 Waverider
+	@description = The Boeing X-51 "Waverider" is an unmanned scramjet aircraft for hypersonic flight at Mach 5. The aircraft was designated X-51 in 2005. It completed its first powered hypersonic flight on 26 May 2010. After the cruise missile was brought into service as Fast Strike Weapon AGM-183 ARRW (Air-Launched Rapid Response Weapon) Waverider Air-Launched Cruise Missile.
+	@MODULE[MissileLauncher] {
+		%shortName = AGM-183
+	}
+}
+@PART[LRASM-A]:NEEDS[SMA] {
+	@title = AGM-158C LRASM
+	@description = The DARPA AGM-158C LRASM (Long Range Anti-Ship Missile) is a stealthy anti-ship  air launched cruise missile developed for the United States Air Force and United States Navy. The LRASM was intended to pioneer more sophisticated autonomous targeting capabilities than the U.S. Navy's current Harpoon anti-ship missile, which has been in service since 1977. In February 2014 an urgent capability stop-gap solution was needed to address range and survivability problems with the Harpoon and to prioritize defeating enemy warships, which has been neglected since the end of the Cold War. In August 2015, the missile was officially designated AGM-158C.
+	@MODULE[MissileLauncher] {
+		%shortName = AGM-158C
+	}
+}
+@PART[LRASM-AS]:NEEDS[SMA] {
+	@title = BGM-158C LRASM	
+	@description = The DARPA BGM-158C LRASM (Long Range Anti-Ship Missile) is a stealthy anti-ship surface launched cruise missile developed for the United States Air Force and United States Navy. The LRASM was intended to pioneer more sophisticated autonomous targeting capabilities than the U.S. Navy's current Harpoon anti-ship missile, which has been in service since 1977. In February 2014 an urgent capability stop-gap solution was needed to address range and survivability problems with the Harpoon and to prioritize defeating enemy warships, which has been neglected since the end of the Cold War. In August 2015, the missile was officially designated BGM-158C.
+	@MODULE[MissileLauncher] {
+		%shortName = BGM-158C
+	}
+}
+@PART[LRASM-B]:NEEDS[SMA] {
+	@title = AGM-158D LRASM
+	@description = The DARPA AGM-158D LRASM (Long Range Anti-Ship Missile) is a stealthy anti-ship supersonic air launched cruise missile developed for the United States Air Force and United States Navy. The Navy will hold a competition for the Offensive Anti-Surface Warfare (OASuW)/Increment 2 anti-ship missile as a follow-on to LRASM to enter service in 2024. It is expected the LRASM will compete against the joint Kongsberg/Raytheon offering of the Joint Strike Missile (JSM) for air-launch needs and an upgraded Raytheon Tomahawk cruise missile for surface-launch needs.
+	@MODULE[MissileLauncher] {
+		%shortName = AGM-158D
+	}
+}
+@PART[LRASM-BS]:NEEDS[SMA] {
+	@title = BGM-158D LRASM	
+	@description = The DARPA AGM-158D LRASM (Long Range Anti-Ship Missile) is a stealthy anti-ship supersonic surface launched cruise missile developed for the United States Air Force and United States Navy. The Navy will hold a competition for the Offensive Anti-Surface Warfare (OASuW)/Increment 2 anti-ship missile as a follow-on to LRASM to enter service in 2024. It is expected the LRASM will compete against the joint Kongsberg/Raytheon offering of the Joint Strike Missile (JSM) for air-launch needs and an upgraded Raytheon Tomahawk cruise missile for surface-launch needs.
+	@MODULE[MissileLauncher] {
+		%shortName = BGM-158D
+	}
+}
+
+
+// @PART[HHQ16C]:NEEDS[SMA] {
+	// @title = HQ-17A Red Banner
+	// @description = The HQ-17A "Red Banner" is an all-weather low to medium altitude, short-range surface-to-air missile system developed by China. Although reverse engineered from the Tor-M1, the HQ-17 is not a direct copy and instead features many improvements. Unlike the Tor system, the HQ-17 incorporates an indigenous all terrain tracked launch vehicle, a new identification friend or foe (IFF) antenna on top of the search radar, an electronically scanned array radar for better performance against jamming and the ability to datalink with other Chinese systems.
+	// @MODULE[MissileLauncher] {
+		// %shortName = HQ-17A
+	// }
+// }
+@PART[HHQ16C]:NEEDS[SMA] {
+	@title = HQ-16A Red Banner
+	@description = The China Aerospace Science and Technology Corp (CASC) HQ-16B/LY-80 "Red Flag" Surface-to-Air missile system that China has installed on the Type II Frigate (054A) is believed to be the Chinese derivative of the 3K90 "Uragan" Systems. The Type II Frigate uses a hot-launch vertical launcher similar to the 3S90E.1. The HQ-16 can intercept sea ​​skimmers flying below 10m, and the minimum interception altitude is estimated to be 3-5m. introduced in the Chinese armed forces. Introduced in  2011.
+	@MODULE[MissileLauncher] {
+		%shortName = HQ-16A
+	}
+}
+@PART[HHQ17]:NEEDS[SMA] {
+	@title = HQ-16B Red Flag
+	@description = The China Aerospace Science and Technology Corp (CASC) HQ-16A/LY-80 "Red Flag" Surface-to-Air missile system that China has installed on the Type II Frigate (054A) is believed to be the Chinese derivative of the 3K90 "Uragan" Systems. The Type II Frigate uses a hot-launch vertical launcher similar to the 3S90E.1. The HQ-16 can intercept sea ​​skimmers flying below 10m, and the minimum interception altitude is estimated to be 3-5m. introduced in the Chinese armed forces. Introduced in September 2016.
+	@MODULE[MissileLauncher] {
+		%shortName = HQ-16B
+	}
+}
+@PART[HHQ19RCS]:NEEDS[SMA]:FINAL {
+	@title = HQ-19 Red Banner
+	@description = A vastly upgraded version of HQ-9 to counter ballistic missile and satellites (ASAT) on the lower end of Low Earth orbits, and it is the Chinese equivalent of THAAD. HQ-19 is armed with a dual purpose exosphere kinetic kill vehicle (kkv) warhead, which can be used against ballistic missile warheads or satellites. Its first flight occurred in 2003.
+	
+	@mass = 1.5
+	@maxTemp = 5000
+	
+	@MODULE[MissileLauncher] {
+		@shortName = SC-19
+		@thrust = 80 //KN thrust during boost phase
+		@cruiseThrust = 30 //thrust during cruise phase
+		@dropTime = 0.5 //how many seconds after release until engine ignites
+		@deployTime = 1
+		%boostTime = 40 //seconds of boost phase
+		%cruiseTime = 1200 //seconds of cruise phase
+		%maxTurnRateDPS = 60 //degrees per second
+		@homingType = AAM
+		
+		%rcsThrust = 150
+		
+		%aero = true
+		%liftArea = 0.002
+		%steerMult = 30
+		%maxTorque = 120
+		%maxAoA = 180
+		%aeroSteerDamping = 30
+		
+		%DetonationDistance = 100
+        %engageAir = true
+		%engageMissile = true    
+	    %engageGround = false
+        %engageSLW = false
+		
+		@activeRadarRange = 99000
+		@terminalManeuvering = false
+		@terminalGuidanceDistance = 0
+		%terminalGuidanceShouldActivate = false
+		
+		@activeRadarLockTrackCurve
+	    {
+            @key,0 = 1000 0
+	    }
+	}
+	
+	@MODULE[BDExplosivePart] {
+		@tntMass = 210
+	}
+}
+
+@PART[LLauncher]:NEEDS[SMA] {
+	@title = M901 Launching Station
+	@description = The M901 Launching Stations are remotely operated, self-contained units. The ECS controls operation of the launchers through each launcher's DLT, via fiber optic or VHF (SINCGARS) data link.
+}
+@PART[HHQXX]:NEEDS[SMA] {
+	@title = Hongqi-40 Proximity Missile Launcher
+	@description = Advanced Anti-Missie System is built to adapt the future threat with stealth features when placed sideways. Can hold up to 40 missiles.
+}
+@PART[3X]:NEEDS[SMA] {
+	@title = Hongqi-9 system multipurpose vehicle.
+	-MODULE[BurnTogether]:NEEDS[!BurnTogether] {}
+	@MODULE[ModuleRadar] {
+		@canLock = false
+	}
+}
+@PART[3XR]:NEEDS[SMA] {
+	@title = Hongqi-9 system HT-233 radar.
 	-MODULE[ModuleECMJammer] {}
+}
+@PART[3X2]:NEEDS[SMA] {
+	@title = Hongqi-9 system Ballistic missile launcher
+	@description = Hongqi-9 system Ballistic missile launcher able to fit the largest of all missiles.
+	-MODULE[ModuleECMJammer] {}
+}
+@PART[3X6L]:NEEDS[SMA] {
+	@title = Hongqi-9 system SR-SAM launcher
+	@description = Hongqi-9 system Short-range Surface-to-Air Missile launcher able to fit smaller SAM missiles.
+}
+@PART[3XL]:NEEDS[SMA] {
+	@title = Hongqi-9 system MR-SAM launcher
+	@description = Hongqi-9 system Medium-range Surface-to-Air Missile launcher able to fit the HQ-9 missiles.
+}
+@PART[3X120]:NEEDS[SMA] {
+	@title = Hongqi-9 system SR-SAM launcher
+	@description = Hongqi-9 system Short-range Surface-to-Air Missile launcher able to fit smaller SAM missiles.
+}
+@PART[3XLASER]:NEEDS[SMA] {
+	@title = Hongqi-9 system Point-defence Laser
+	@description = Hongqi-9 system Experimental laser for point-defence duties. Use with caution, causes sunburns.
+	-MODULE[ModuleTargetingCamera] {}
 }
